src/objects/ExecutiveBusinessCaseHistory__c.object
<CustomObject>
    <description>EBC - This custom object tracks the historical data for an EBC record. For example, changes to the stage for an EBC is being tracked as a record in this object</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgeDays__c</fullName>
        <formula>IF( ISBLANK( EndDate__c ), TODAY() - StartDate__c , EndDate__c - StartDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgeMonths__c</fullName>
        <formula>IF( ISBLANK( EndDate__c ), FLOOR(((TODAY() - StartDate__c)*12)/365) , FLOOR(((EndDate__c - StartDate__c)*12)/365))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBC__c</fullName>
        <label>EBC</label>
        <referenceTo>Executive_Business_Case__c</referenceTo>
        <relationshipLabel>History</relationshipLabel>
        <relationshipName>ExecutiveBusinessCaseHistory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Concept</fullName>
                </value>
                <value>
                    <fullName>EBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>EBC</fullName>
                </value>
                <value>
                    <fullName>Executive Sponsor Review</fullName>
                </value>
                <value>
                    <fullName>Internal Review</fullName>
                </value>
                <value>
                    <fullName>BRG Review</fullName>
                </value>
                <value>
                    <fullName>PAB Review</fullName>
                </value>
                <value>
                    <fullName>IRB Review</fullName>
                </value>
                <value>
                    <fullName>Governance Review</fullName>
                </value>
                <value>
                    <fullName>Funding Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Executive Business Case History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EBC__c</columns>
        <columns>Phase__c</columns>
        <columns>Stage__c</columns>
        <columns>Active__c</columns>
        <columns>AgeDays__c</columns>
        <columns>AgeMonths__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HIS-{YYYY}{MM}-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Executive Business Case History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>